# srmbench

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  tests.yml
examples/: README.md  counting_objects_example.py  even_pixels_example.py  mnist_sudoku_example.py
srmbench/: __init__.py  __version__.py  transforms.py
srmbench/datasets/: __init__.py  counting_polygons.py  counting_polygons_ffhq.py  counting_polygons_subdataset.py  even_pixels.py  ffhq.py  font_cache.py  labelers.py  mnist_sudoku.py  srm_dataset.py
srmbench/datasets/counting_objects/: __init__.py  counting_objects.py  counting_objects_ffhq.py  counting_objects_subdataset.py  labelers.py
srmbench/datasets/counting_polygons/: __init__.py  counting_polygons.py  counting_polygons_ffhq.py  counting_polygons_subdataset.py  ffhq.py
srmbench/evaluations/: __init__.py  counting_objects_evaluation.py  even_pixels_evaluation.py  mnist_sudoku_evaluation.py
tests/: __init__.py  test_datasets.py  test_evaluations.py  test_integration.py
