[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srmbench"
dynamic = ["version"]
description = "Datasets and evaluation from the Spatial Reasoning with Denoising Models paper"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bartlomiej Pogodzinski", email = "bpogodzi@mpi-inf.mpg.de"},
    {name = "Christopher Wewer", email = "cwewer@mpi-inf.mpg.de"},
    {name = "Jan Eric Lenssen", email = "jan.lenssen@mpi-inf.mpg.de"},
]
maintainers = [
    {name = "Bartlomiej Pogodzinski", email = "bpogodzi@mpi-inf.mpg.de"},
]
keywords = ["spatial reasoning", "diffusion models", "flow matching", "image generation", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "huggingface-hub>=0.16.0",
    "safetensors>=0.3.0",
    "jaxtyping>=0.2.0",
    "beartype>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]
all = [
    "srmbench[dev,docs]",
]

[project.urls]
repository = "https://github.com/spatialreasoners/srmbench"
bug_tracker = "https://github.com/spatialreasoners/srmbench/issues"

[project.scripts]
srm-bench = "srmbench.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["srmbench*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
srmbench = ["*.yaml", "*.yml", "*.json", "*.txt"]

[tool.setuptools.dynamic]
version = {attr = "srmbench.__version__.__version__"}

# Black configuration
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["srmbench"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=srmbench",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "huggingface_hub.*",
    "safetensors.*",
    "jaxtyping.*",
    "beartype.*",
]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["srmbench"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
